[tool.poetry]
name = "griptape-cli"
version = "0.4.1"
description = "CLI for the Griptape Framework and Cloud"
authors = ["Griptape <hello@griptape.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/griptape-ai/griptape-cli"

packages = [
    {include = "griptape"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.1.3"
griptape = "^0.24.0"
cookiecutter = "^2.1.1"
attrs = "^23.1.0"
stringcase = "^1.2.0"
inquirerpy = "^0.3.4"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gt = "griptape.cli.main:cli"
