[tool.poetry]
name = "griptape-cli"
version = "0.5.1"
description = "CLI for the Griptape Framework and Cloud"
authors = ["Griptape <hello@griptape.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/griptape-ai/griptape-cli"

packages = [
    {include = "griptapecli"}
]

[tool.poetry.dependencies]
python = "~3.11.0"
click = "^8.1.3"
griptape = {path = "../griptape", develop = true, extras=["all"]}
attrs = "^23.1.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.111.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-mock = "*"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pyright = "^1.1.363"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gt = "griptapecli.main:cli"
